[sigma_circuits] noah commit

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210402 Analysis JQS.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210402 Analysis JQS.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "upset-brook",
+   "id": "informed-centre",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "canadian-museum",
+   "id": "southwest-resource",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cutting-string",
+   "id": "bulgarian-cotton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "charitable-farmer",
+   "id": "dimensional-sleeve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "running-cooperative",
+   "id": "confident-substance",
    "metadata": {},
    "source": [
     "# Load data"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sought-junior",
+   "id": "tropical-interval",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enormous-findings",
+   "id": "designed-international",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,13 +90,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "romance-agent",
+   "id": "responsible-technology",
    "metadata": {},
    "outputs": [],
    "source": [
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210324flipped.pickle\"\n",
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210204nonflipped_psc101.pickle\"\n",
-    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210402_expt210331ramp.pickle\"\n",
+    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210402_expt210331ramp.pickle\"\n",
+    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210507_expt210505.pickle\"\n",
+    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210514_expt210511.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210605_expt210602_2.pickle\"\n",
     "data = pickle.load(open(filename, \"rb\"))\n",
     "df = data[\"table\"]\n",
     "md = data[\"metadata\"]\n",
@@ -107,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bibliographic-extreme",
+   "id": "confirmed-drinking",
    "metadata": {},
    "source": [
     "# Acquisition times"
@@ -116,8 +119,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "operational-dryer",
-   "metadata": {},
+   "id": "played-donna",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "md.keys()"
@@ -126,8 +131,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "official-delta",
-   "metadata": {},
+   "id": "portuguese-beginning",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dtimeabsolute = get_in(\n",
@@ -145,8 +152,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reduced-klein",
-   "metadata": {},
+   "id": "encouraging-trustee",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "tdelta.total_seconds()"
@@ -155,8 +164,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "renewable-yukon",
-   "metadata": {},
+   "id": "medical-complement",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "first_position_times = md[\"acquisition_times\"][:: len(grid_df)] / 1e3  # seconds"
@@ -165,8 +176,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "perceived-smell",
-   "metadata": {},
+   "id": "gorgeous-awareness",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "last_good_cycle = np.argmax(np.diff(first_position_times) == 0) - 1"
@@ -175,8 +188,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modular-advice",
-   "metadata": {},
+   "id": "laughing-holocaust",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "seconds_per_timepoint = first_position_times[last_good_cycle] / last_good_cycle"
@@ -185,8 +200,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "streaming-childhood",
-   "metadata": {},
+   "id": "otherwise-description",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "mux_times = [m[0] for m in mux_log]"
@@ -195,8 +212,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chronic-honey",
-   "metadata": {},
+   "id": "negative-cookbook",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "mux_timepoints = [\n",
@@ -207,8 +226,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alleged-boost",
-   "metadata": {},
+   "id": "acoustic-tours",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "mux_timepoints"
@@ -217,8 +238,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "judicial-shape",
-   "metadata": {},
+   "id": "suspected-anger",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "mux_timepoints2 = [\n",
@@ -230,8 +253,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sophisticated-automation",
-   "metadata": {},
+   "id": "persistent-pendant",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "mux_timepoints2"
@@ -240,8 +265,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "important-kennedy",
-   "metadata": {},
+   "id": "dimensional-gathering",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "plt.plot(md[\"acquisition_times\"][:5000])"
@@ -249,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interpreted-mathematics",
+   "id": "recreational-coffee",
    "metadata": {},
    "source": [
     "# Filtered"
@@ -258,16 +285,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "going-typing",
+   "id": "forward-basketball",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
     "cells = df.join(grid_df).reset_index()\n",
+    "cells.t = cells.t * 15 / 60\n",
     "filtered_cells = cells[\n",
     "    cells[\"area\"].between(200, 800)\n",
-    "    & cells[\"GFP-PENTA\"].between(100, 4000)\n",
-    "    & ~cells[\"row\"].isin([\"F\"])\n",
+    "    & cells[\"GFP-PENTA\"].between(300, 5000)\n",
+    "    & cells[\"row\"].isin([\"A\", \"B\", \"C\", \"D\", \"F\", \"G\", \"H\"])\n",
+    "    #     & cells[\"RFP-PENTA\"].between(800, 1200)\n",
     "][[\"GFP-PENTA\", \"row\", \"t\"]]\n",
     "\n",
     "filtered_cells2 = filtered_cells.groupby([\"row\", \"t\"]).apply(\n",
@@ -283,20 +312,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rocky-iceland",
+   "id": "adapted-collaboration",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_plot = means.hvplot.line(\"t\", by=\"row\", logy=True)\n",
+    "mean_plot = means.hvplot.line(\n",
+    "    \"t\", by=\"row\", logy=True, ylim=[600, 5000], xlim=[9.25, 24]\n",
+    ")\n",
     "noise_plot = limits.hvplot.area(\n",
     "    x=\"t\", y=\"lower\", y2=\"upper\", by=\"row\", stacked=False, alpha=0.2, logy=True\n",
     ")\n",
-    "mux_events = hv.Overlay(\n",
-    "    [\n",
-    "        hv.VLine(t).opts(alpha=0.2, color=\"grey\", line_dash=\"dotted\")\n",
-    "        for t in mux_timepoints\n",
-    "    ]\n",
-    ")\n",
+    "# mux_events = hv.Overlay(\n",
+    "#     [\n",
+    "#         hv.VLine(t).opts(alpha=0.2, color=\"grey\", line_dash=\"dotted\")\n",
+    "#         for t in mux_timepoints\n",
+    "#     ]\n",
+    "# )\n",
     "\n",
     "# line_alpha = 0.2\n",
     "# IPTG_starts = (\n",
@@ -325,17 +356,111 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "optional-trigger",
+   "id": "occasional-google",
    "metadata": {},
    "outputs": [],
    "source": [
-    "(mean_plot * noise_plot).opts(width=800, height=400)"
+    "(mean_plot * noise_plot).opts(\n",
+    "    width=1000, height=400, ylabel=\"GFP Fluorescence\", xlabel=\"Hours\", logy=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abroad-hearing",
+   "id": "ambient-removal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(sigmas / (means - 360)).hvplot.line(\n",
+    "    \"t\",\n",
+    "    by=\"row\",\n",
+    "    logy=True,\n",
+    "    ylim=[0.05, 0.5],\n",
+    "    ylabel=\"Coefficient of Variation\",\n",
+    "    xlabel=\"Time (Hours)\",\n",
+    "    width=1000,\n",
+    "    height=400,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "falling-somalia",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "for lane in [\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\"]:\n",
+    "    m = means[lane].reset_index()\n",
+    "    m_init = m[m[\"t\"].between(3.5, 6)]\n",
+    "    X = m_init[\"t\"].to_numpy().reshape(-1, 1)\n",
+    "    Y = m_init[0].to_numpy().reshape(-1, 1)\n",
+    "    linear_regressor = LinearRegression()  # create object for the class\n",
+    "    reg = linear_regressor.fit(X, Y)  # perform linear regression\n",
+    "\n",
+    "    print(lane, reg.coef_, Y[0] - 360)\n",
+    "    plt.scatter(m[\"t\"], m[0], linewidth=2)\n",
+    "\n",
+    "    x_new = np.linspace(3, 10, 100)\n",
+    "    y_new = reg.predict(x_new[:, np.newaxis])\n",
+    "    plt.plot(x_new, y_new, linewidth=4, label=f\"{lane}, {int(reg.coef_[0][0])}\")\n",
+    "plt.xlim(2, 15)\n",
+    "plt.ylim(300, 4000)\n",
+    "plt.xlabel(\"Time (hours)\")\n",
+    "plt.ylabel(\"GFP Fluorescence\")\n",
+    "plt.rcParams.update({\"font.size\": 22})\n",
+    "# matplotlib.rc('xtick', labelsize=20)\n",
+    "# matplotlib.rc('ytick', labelsize=20)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "burning-suicide",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "\n",
+    "def inv_hill(y):\n",
+    "    return y / (y.max() + 1 - y)\n",
+    "\n",
+    "\n",
+    "for lane in [\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\"]:\n",
+    "    m = means[lane].reset_index()\n",
+    "    m_init = m[m[\"t\"].between(3.5, 15)]\n",
+    "\n",
+    "    X = m_init[\"t\"].to_numpy().reshape(-1, 1)\n",
+    "    Y = inv_hill(m_init[0]).to_numpy().reshape(-1, 1)\n",
+    "    linear_regressor = LinearRegression()  # create object for the class\n",
+    "    reg = linear_regressor.fit(X, Y)  # perform linear regression\n",
+    "    print(lane, reg.coef_)\n",
+    "    plt.scatter(X, Y, linewidth=2)\n",
+    "\n",
+    "    x_new = np.linspace(3, 10, 100)\n",
+    "    y_new = reg.predict(x_new[:, np.newaxis])\n",
+    "#     plt.plot(x_new,y_new,linewidth=4,label=f'{lane}, {int(reg.coef_[0][0])}')\n",
+    "# plt.xlim(0,20)\n",
+    "plt.ylim(0, 50)\n",
+    "plt.xlabel(\"Time (hours)\")\n",
+    "plt.ylabel(\"GFP Fluorescence\")\n",
+    "plt.rcParams.update({\"font.size\": 22})\n",
+    "# matplotlib.rc('xtick', labelsize=20)\n",
+    "# matplotlib.rc('ytick', labelsize=20)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "starting-prospect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "settled-doctrine",
+   "id": "historical-southeast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entitled-sarah",
+   "id": "shaped-electron",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assumed-possible",
+   "id": "dated-competition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "original-philosophy",
+   "id": "broad-meter",
    "metadata": {},
    "outputs": [],
    "source": []
