[deaton/trenchripper] Updated Master.ipynb

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -375,6 +375,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interactive_kymograph.preview_y_precentiles_consensus_interactive()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
