[shenker/cloning,cloning] WIP cloning notebooks.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210601 Automation prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210601 Automation prototyping.ipynb
@@ -127,6 +127,382 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Plasmid map for Daniel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test pcr with other primer order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = reg[(\"LIB\", \"parts\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmd_semantics.eval_exprs_by_priority(\"oLT72=oLT73\", reg.get)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmd_semantics.eval_expr(\"pLIB122\", reg.get)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmd_semantics.eval_expr(\"JUMP_upstream_T97\", reg.get)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plib122 = cmd_semantics.eval_expr(\"pLIB122\", reg.get)[\"_seq\"]\n",
+    "olib179 = cmd_semantics.eval_expr(\"oLIB179\", reg.get)[\"_seq\"]\n",
+    "olib180 = cmd_semantics.eval_expr(\"oLIB180\", reg.get)[\"_seq\"]\n",
+    "olib181 = cmd_semantics.eval_expr(\"oLIB181\", reg.get)[\"_seq\"]\n",
+    "olib182 = cmd_semantics.eval_expr(\"oLIB182\", reg.get)[\"_seq\"]\n",
+    "a = cmd_semantics.eval_expr(\"pLIB122<oLIB182,oLIB179>\", reg.get)[\"_seq\"]\n",
+    "b = cmd_semantics.eval_expr(\"JUMP_upstream_T97\", reg.get)[\"_seq\"]\n",
+    "c = cmd_semantics.eval_expr(\"pLIB122<oLIB180,oLIB181>\", reg.get)[\"_seq\"]\n",
+    "d = cmd_semantics.eval_expr(\"JUMP_downstream_T540\", reg.get)[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olib180"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olib181"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(plib122)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd_nocirc = sequence.assemble(\n",
+    "    [c.annotate(\"c\"), d.annotate(\"d\")], method=\"gibson\", circularize=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd_nocirc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd_nocirc._assemble(None, method=\"gibson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ab = sequence.assemble(\n",
+    "    [a.annotate(\"a\"), b.annotate(\"b\", type=\"foo\")], method=\"gibson\", circularize=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio.Seq import Seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = sequence.DsSeqRecord(Seq(\"gagcctttcgttttatttgatg\")).annotate(\"a\")\n",
+    "y = b.annotate(\"b\", type=\"foo\").slice(10, None, annotation_start=0)\n",
+    "(x + y).features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ab = sequence.assemble(\n",
+    "    [\n",
+    "        sequence.DsSeqRecord(Seq(\"gagcctttcgttttatttgatg\")).annotate(\"a\"),\n",
+    "        b.annotate(\"b\", type=\"foo\"),\n",
+    "    ],\n",
+    "    method=\"gibson\",\n",
+    "    circularize=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ab.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bc = sequence.assemble([b.annotate(\"b\"), c.annotate(\"c\")], method=\"gibson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/Users/jacob/Downloads/_ab2.gb\", \"w\") as f:\n",
+    "    f.write(ab.format(\"genbank\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.assemble([b, c], method=\"gibson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.assemble([c, d], method=\"gibson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.assemble([d, a], method=\"gibson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = cmd_semantics.eval_command(\n",
+    "    \"@Gib(pLIB122<oLIB182,oLIB179>, JUMP_upstream_T97, pLIB122<oLIB180,oLIB181>, JUMP_downstream_T540)\",\n",
+    "    reg.get,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = cmd_semantics.eval_command(\n",
+    "    \"@Gib(pLIB122<oLIB182,oLIB179>, JUMP_upstream_2r2, pLIB122<oLIB180,oLIB181>, JUMP_downstream_2r2)\",\n",
+    "    reg.get,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/Users/jacob/Downloads/insulated_hudson.gb\", \"w\") as f:\n",
+    "    f.write(s[\"_seq\"].format(\"genbank\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pcrs = [\n",
+    "    \"pLIB122<oLIB182,oLIB179>\",\n",
+    "    \"pLIB122<oLIB180,oLIB181>\",\n",
+    "    \"pLIB122<oLIB180,oLIB179>\",\n",
+    "    \"pLIB122<oLIB182,oLIB181>\",\n",
+    "]\n",
+    "seqs = [cmd_semantics.eval_expr(c, reg.get) for c in pcrs]\n",
+    "[len(s[\"_seq\"]) for s in seqs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg[(\"oLT\", \"oligos\")].clear_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = cmd_semantics.eval_command(\"@Gib(oLT78, oLT79)\", reg.get)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s2 = cmd_semantics.eval_expr(\"JUMP_upstream_2r2\", reg.get)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s2[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s2[\"_seq\"] == s[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Test case"
    ]
   },
