--- a/paulssonlab/src/paulssonlab/shenker/cloning/210601 Terminators.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210601 Terminators.ipynb
@@ -555,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date = datetime.now().strftime(\"%-d/%-m/%Y\")\n",
+    "date = datetime.now().strftime(\"%-m/%-d/%Y\")\n",
     "\n",
     "base_row = {\n",
     "    \"Author\": \"Jacob Quinn Shenker\",\n",
@@ -904,7 +904,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date = datetime.now().strftime(\"%-d/%-m/%Y\")\n",
+    "date = datetime.now().strftime(\"%-m/%-d/%Y\")\n",
     "\n",
     "base_row = {\n",
     "    \"Author\": \"Jacob Quinn Shenker\",\n",
@@ -948,8 +948,15 @@
     "        \"Description\": description,\n",
     "        **base_row,\n",
     "    }\n",
-    "    rows.append(row)\n",
-    "\n",
+    "    rows.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for row in rows:\n",
     "    olt[olt.next_id()] = row"
    ]
@@ -998,7 +1005,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Similarity"
+    "# Split oLT74"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cytoolz import dissoc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olt = reg[(\"oLT\", \"oligos\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_row = olt[\"oLT74\"]\n",
+    "seq = old_row[\"Sequence\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "homology_length = 20\n",
+    "break_idx = 111\n",
+    "idxs = (slice(None, break_idx + homology_length), slice(break_idx, None))\n",
+    "for idx in idxs:\n",
+    "    print(seq[idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = datetime.now().strftime(\"%-m/%-d/%Y\")\n",
+    "\n",
+    "rows = []\n",
+    "\n",
+    "for i, idx in enumerate(idxs):\n",
+    "    row = {\n",
+    "        **dissoc(old_row, \"ID\"),\n",
+    "        \"Sequence\": seq[idx].upper(),\n",
+    "        \"Name\": \"{}_v2_split{}\".format(old_row[\"Name\"], i + 1),\n",
+    "        \"Description\": \"Split section {}-of-{} of oLT74 (20bp overlap).\\n{}\".format(\n",
+    "            i + 1, len(idxs), old_row[\"Description\"]\n",
+    "        ),\n",
+    "        \"Date\": date,\n",
+    "        \"Order date\": date,\n",
+    "    }\n",
+    "    rows.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for row in rows:\n",
+    "    olt[olt.next_id()] = row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olt.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Similarity"
    ]
   },
   {
