[shenker/cloning] RBS library v3.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210720 SigW RBS library.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210720 SigW RBS library.ipynb
@@ -288,9 +288,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "olib = reg[(\"oLIB\", \"oligos\")]\n",
+    "lib_parts = reg[(\"LIB\", \"parts\")]\n",
+    "olt = reg[(\"oLT\", \"oligos\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "primer_binding = (\n",
-    "    lib_parts[\"Twist_adaptor_prefix\"][\"Sequence\"],\n",
-    "    lib_parts[\"Twist_adaptor_suffix\"][\"Sequence\"],\n",
+    "    lib_parts[\"Eaton_library_prefix\"][\"Sequence\"],\n",
+    "    lib_parts[\"Eaton_library_suffix\"][\"Sequence\"],\n",
     ")"
    ]
   },
@@ -350,27 +361,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "olib = reg[(\"oLIB\", \"oligos\")]\n",
-    "lib_parts = reg[(\"LIB\", \"parts\")]\n",
-    "olt = reg[(\"oLT\", \"oligos\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "overhangs = overhangs_for(part_types[\"5UTR_2\"])\n",
     "random_bases = (\n",
     "    \"GCTTCA\",\n",
     "    \"TGCTAA\",\n",
     ")  # to add between BsmBI recognition site and ends of oligos\n",
     "flanks = (\"CGTCTCGGTCTCa\", \"tGAGACCgGAGACG\")  # storage vector BsmBI flanks\n",
-    "primer_binding = (\n",
-    "    lib_parts[\"Twist_adaptor_prefix\"][\"Sequence\"],\n",
-    "    lib_parts[\"Twist_adaptor_suffix\"][\"Sequence\"],\n",
-    ")\n",
     "seqs_to_order = {}\n",
     "for name, seq in seqs.items():\n",
     "    seqs_to_order[name] = workflow.add_flanks(\n",
@@ -388,7 +384,7 @@
    "source": [
     "date = datetime.now().strftime(\"%-m/%-d/%Y\")\n",
     "\n",
-    "description = \"Added Twist flanks, to be amplified with oLIB209/210.\"\n",
+    "description = \"Added Eaton flanks, to be amplified with oLIB45/46.\"\n",
     "\n",
     "base_row = {\n",
     "    \"Author\": \"Jacob Quinn Shenker\",\n",
@@ -402,7 +398,7 @@
     "rows = []\n",
     "\n",
     "for seq_name, seq in seqs_to_order.items():\n",
-    "    name = f\"{seq_name}_v2\"\n",
+    "    name = f\"{seq_name}_v3\"\n",
     "    row = {\n",
     "        \"Name\": name,\n",
     "        \"Sequence\": str(seq).upper(),\n",
