[shenker/cloning,cloning] WIP pcr/find_primer_binding_site. Now works on circular sequences. Not tested well.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210803 Insulation+FISH primers.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210803 Insulation+FISH primers.ipynb
@@ -334,7 +334,317 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FISH UNS primers"
+    "# Backbone primers with UNSes for FISH barcodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# backbone primers with UNS9 instead of UNS1 (reverse) and UNS10 (forward)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str.replace?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lib_parts = reg[(\"LIB\", \"parts\")]\n",
+    "plib_maps = reg[(\"pLIB\", \"maps\")]\n",
+    "olib_oligos = reg[(\"oLIB\", \"oligos\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uns1 = lib_parts[\"UNS1\"][\"Sequence\"]\n",
+    "uns9 = lib_parts[\"UNS9\"][\"Sequence\"]\n",
+    "uns10 = lib_parts[\"UNS10\"][\"Sequence\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uns1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olib_oligos[\"oLIB179\"][\"\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olib_oligos[\"oLIB177\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = plib_maps[\"pLIB122\"]\n",
+    "target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primer = olib_oligos[\"oLIB177\"][\"Sequence\"]\n",
+    "primer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target.reindex(-10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# why is iterate_shifts non-symmetric in both arguments? (use of min/max?)\n",
+    "# make iterate_shifts work for circular sequences\n",
+    "# what does shift convey that a/b_start/stop doesn't? integrate strand=-1 handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sites = sequence.find_primer_binding_site(target, primer)\n",
+    "sites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sites = sequence.find_primer_binding_site(target.reindex(-20), primer)\n",
+    "sites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sites = sequence.find_primer_binding_site(target.reindex(13), primer)\n",
+    "sites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = plib_maps[\"pLIB122\"]\n",
+    "primer1 = olib_oligos[\"oLIB180\"][\"Sequence\"]\n",
+    "primer2 = olib_oligos[\"oLIB173\"][\"Sequence\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.find_primer_binding_site(template, primer1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template.slice(3887, (3887 + 20) % len(template))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template2 = template.reindex(-93)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template2.circular = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = sequence.pcr(template2, primer1, primer2.lower())\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(res.seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(target[2:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sites = sequence.find_primer_binding_site(\n",
+    "    target.reindex(-20), str(sequence.reverse_complement(primer).upper())\n",
+    ")\n",
+    "sites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primer[-17:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primer[-20:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(primer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uns1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oLIB117"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FISH barcode primers with UNSes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"caaaaaacccctcaagac\" + uns9"
    ]
   },
   {
