[cloning,shenker/cloning] Allow sensible find_primer_binding_site behavior for require_3prime_clamp=False, this is mostly useful for debugging.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210803 Insulation+FISH primers.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210803 Insulation+FISH primers.ipynb
@@ -437,26 +437,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target.reindex(-10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# why is iterate_shifts non-symmetric in both arguments? (use of min/max?)\n",
-    "# make iterate_shifts work for circular sequences\n",
-    "# what does shift convey that a/b_start/stop doesn't? integrate strand=-1 handling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sites = sequence.find_primer_binding_site(target, primer)\n",
     "sites"
    ]
@@ -487,92 +467,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template = plib_maps[\"pLIB122\"]\n",
-    "primer1 = olib_oligos[\"oLIB180\"][\"Sequence\"]\n",
-    "primer2 = olib_oligos[\"oLIB173\"][\"Sequence\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.find_primer_binding_site(template, primer1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template.slice(3887, (3887 + 20) % len(template))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template2 = template.reindex(-93)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template2.circular = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = sequence.pcr(template2, primer1, primer2.lower())\n",
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "str(res.seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(target[2:2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sites = sequence.find_primer_binding_site(\n",
-    "    target.reindex(-20), str(sequence.reverse_complement(primer).upper())\n",
+    "    target.reindex(-20), sequence.reverse_complement(primer)\n",
     ")\n",
     "sites"
    ]
@@ -583,7 +479,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "primer[-17:]"
+    "sites = sequence.find_primer_binding_site(\n",
+    "    target.reindex(-20), sequence.reverse_complement(primer), require_3prime_clamp=False\n",
+    ")\n",
+    "sites"
    ]
   },
   {
@@ -592,7 +491,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "primer[-20:]"
+    "sites = sequence.find_primer_binding_site(\n",
+    "    target.reindex(-20).reverse_complement(),\n",
+    "    sequence.reverse_complement(primer),\n",
+    "    require_3prime_clamp=False,\n",
+    ")\n",
+    "sites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test"
    ]
   },
   {
@@ -601,7 +512,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "primer"
+    "sites = sequence.find_primer_binding_site(\n",
+    "    target.reindex(-20).reverse_complement(),\n",
+    "    \"Xggctcagtcgaaagactgggcc\",\n",
+    "    require_3prime_clamp=False,\n",
+    ")\n",
+    "sites"
    ]
   },
   {
@@ -610,7 +526,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(primer)"
+    "sites = sequence.find_primer_binding_site(\n",
+    "    target.reindex(-20).reverse_complement(),\n",
+    "    sequence.reverse_complement(\"XXXcctttaattaaggagttttg\"),\n",
+    "    require_3prime_clamp=False,\n",
+    ")\n",
+    "sites"
    ]
   },
   {
@@ -619,7 +540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uns1"
+    "sequence.reverse_complement(primer)"
    ]
   },
   {
@@ -627,9 +548,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "oLIB117"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
